syntax = "proto3";

package com.anzop.evCharger;

import "google/protobuf/timestamp.proto";

message OutletEventProto {
  string outletId = 1;
  string rfidTag = 2;
  google.protobuf.Timestamp eventTime = 3;
  string status = 4;
}