syntax = "proto3";

package com.anzop.evCharger;

import "google/protobuf/timestamp.proto";

message EventSessionDataProto {
  string sessionId = 1;
  string rfidTag = 2;
  google.protobuf.Timestamp periodStart = 3;
  google.protobuf.Timestamp periodEnd = 4;
  double powerConsumption = 5;
}

message OutletStatusEventProto {
  string requester = 1;
  string outletId = 2;
  string state = 3;
  EventSessionDataProto recentSession = 4;
}